@@ -60,4 +60,25 @@ selftest:
 	touch $@
 
 binary: binary-indep binary-arch
+
+get-orig-source:
+	@rm -rf b43-tools
+	git clone git://git.bu3sch.de/b43-tools.git
+	@test -d b43-tools
+	GIT_DATE=$$(GIT_DIR=b43-tools/.git/ git log -1 --pretty=format:%cD assembler/ disassembler/); \
+		UTC_DATE=$$(date --utc --date="Mon, 12 Sep 2011 20:18:18 +0200" +%Y%m%d.%H%M); \
+		mkdir b43-tools/b43-asm-0~$$UTC_DATE; \
+		test -d b43-tools/b43-asm-0~$$UTC_DATE; \
+		cp -r	b43-tools/assembler \
+			b43-tools/disassembler \
+				b43-tools/b43-asm-0~$$UTC_DATE/; \
+		tar	-C b43-tools/ \
+			--posix \
+			--numeric-owner \
+			--owner=0 \
+			--group=0 \
+			-cjf ../b43-asm_0~$$UTC_DATE.orig.tar.bz2 \
+				b43-asm-0~$$UTC_DATE/
+	@rm -rf b43-tools
+
 .PHONY: build clean binary-indep binary-arch binary install
